fixed double scrollbar, was a css global issue

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,10 +2,11 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 50vh;
   margin: 0;
   padding: 0;
   background-color:black;
+  overflow: hidden;
+  height: auto;
 }
 
 .intro {
@@ -26,6 +27,7 @@
   width: 100%;
   height: 100vh;
   z-index: 0;
+  overflow: hidden;
 }
 
 @keyframes jump {
