--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,7 +6,7 @@
 
 html, body, #__next {
   width: 100%;
-  height: 175vh;
+  height: auto;
   margin: 0 !important;
   padding: 0;
 }
